# a2logviz

./: .gitignore  CLAUDE.md  README.md  description  pyproject.toml
a2logviz/: __init__.py  abuse_detector.py  anomaly_detector.py  clickhouse_client.py  column_analyzer.py  exploration_server.py  log_parser.py  main.py  web_server.py
