[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2logviz"
version = "0.1.0"
description = "Apache log visualization tool with ClickHouse backend"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "jinja2>=3.1.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "clickhouse-driver>=0.2.6",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "apachelogs>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "ruff>=0.0.280",
    "black>=23.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
a2logviz = "a2logviz.main:main"
a2logviz-test = "a2logviz.main:test_parser"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
